--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 ---
 language: shell
 env:
-  - IMAGE_NAME="${DOCKER_ORG}/geospaas_adas_viewer"
+  - IMAGE_NAME="${DOCKER_ORG}/geospaas:latest"
 services: docker
 # Environment variables defined as part of the Travis CI repository configuration are:
 # - GITHUB_API_TOKEN: Github API key for the nerscci user
-install:
-  - docker build . -t $IMAGE_NAME
+#install:
+  #- docker run build . -t $IMAGE_NAME
 script:
+
   - docker run --rm -v "$(pwd):/src" $IMAGE_NAME python setup.py sdist bdist_wheel
   - >
     docker run --rm
@@ -17,8 +18,8 @@ script:
     -e TRAVIS_PULL_REQUEST
     -v "$(pwd):/src"
     $IMAGE_NAME
-    bash -c "source /opt/conda/bin/activate &&
-    coverage run --source=./geospaas_adas_viewer runtests.py && coveralls"
+    bash -c "source /opt/conda/bin/activate
+    && coverage run --source=./geospaas_adas_viewer runtests.py && coveralls"
 # If the build is triggered by a tag and an API token is defined for the branch
 # (in the travis repository settings), a package is built and added to the release
 #
