change build condition to push

--- a/.github/workflows/tests_and_build.yml
+++ b/.github/workflows/tests_and_build.yml
@@ -1,10 +1,6 @@
 ---
 name: "Unit tests and builds"
-on:
-  push:
-    branches: ['**']
-  release:
-    types: [released]
+on: push
 env:
   IMAGE_NAME: "${{ secrets.DOCKER_ORG }}/geospaas:latest-slim"
 jobs:
