--- a/.github/workflows/tests_and_build.yml
+++ b/.github/workflows/tests_and_build.yml
@@ -31,7 +31,17 @@ jobs:
              -e "GITHUB_RUN_ID=$GITHUB_RUN_ID"
              -e "GITHUB_TOKEN=$GITHUB_TOKEN"
              "${IMAGE_NAME}"
-             bash -c "coverage run --source=./geospaas_adas_viewer runtests.py && coveralls"
+             bash -c "coverage run --source=./geospaas_adas_viewer runtests.py"
+
+      - name: 'Install Python 3.7'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+
+      - name: 'Upload coverage to coveralls.io'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: pip install coveralls && coveralls --service=github
 
       - name: 'Build Python package'
         if: github.event_name == 'release'
